# tasq

./: README.md  pyproject.toml
.agent/rules/: python.md
src/tasq/: __init__.py  cli.py  config.py  storage.py  todotxt.py
tests/: __init__.py  test_config.py  test_task.py
